# ML-accelerated-RayTracing

./: .gitignore  CMakeLists.txt  FinalReport.md  README.md  camera.cpp  checkpoint.md  hittable_list.cpp  interval.cpp  ray.cpp  util.cpp  util.h
src/: aabb.cpp  aabb.h  bvh.cpp  bvh.h  camera.cpp  camera.h  hittable.cpp  hittable.h  hittable_list.cpp  hittable_list.h  interval.cpp  interval.h  main.cpp  material.cpp  material.h  ray.h  sphere.cpp  sphere.h  util.cpp  util.h  vec3.cpp  vec3.h
